
* * * * * * * * * * * * * * *
  Kit-Catalogue Change Log
* * * * * * * * * * * * * * *


This file contains the Kit-Catalogue recent change log.  Any notable updates,
changes and improvements to the system will be detailed in here for the most
recent versions of the software.


--------------------------------------------------------------------------------
v.2.0.4  (release TBC)


== Config

Added search.prioritise_facilities setting to control whether facility items will be listed first in search results.
Added menu.order setting to control the order of items in the main menu.
 

== General

Added item's OU is set accordingly when adding a new item from an OU listing page.
Added HTML class to parent-items in lists (is_parent).

Fixed an error in the browsing page which would hide public items from authenticated users.
Fixed access permission problems for OU-Admin roles.
Fixed minor typo errors in the admin area.
Fixed selected category tick boxes being cleared when an error prevents a new item from saving.



--------------------------------------------------------------------------------
v.2.0.3  (released 02-05-2013)


== General

Fixed an issue with the installation wizard which caused the database installation to fail on some PHP-MySQL configurations. 



--------------------------------------------------------------------------------
v.2.0.2  (limited release)


== Config

Added layout.signin_prompt setting to control the message shown to unauthenticated users.


== General

Fixed an incorrect link to the old department section that should point to the new OU section.



--------------------------------------------------------------------------------
v.2.0.1  (released 23-04-2013)


== Administration

Fixed CSV importer not reading custom field data.


== General

Improved display of manufacturer website link when no manufacturer name has been given. 



--------------------------------------------------------------------------------